--- a/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
@@ -17,10 +17,10 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="p1">Динамическое программирование #2. По состояниям</a>
-    <br><a href="p2">Задача 1. Кузнечик</a>
-    <br><a href="p3">Задача 2. Сумма цифр</a>
-    <br><a href="p4">Задача 3. Задача из университета</a>
+    <a href="#p1">Динамическое программирование #2. По состояниям</a>
+    <br><a href="#p2">Задача 1. Кузнечик</a>
+    <br><a href="#p3">Задача 2. Сумма цифр</a>
+    <br><a href="#p4">Задача 3. Задача из университета</a>
   </p>
   <p>
     <a href="#task1">Задача A. Миллиардная Функция Васи</a>
@@ -75,6 +75,26 @@
     <li>Как обходить объект ДП? Классический обход слева направо сверху вниз.</li>
     <li>Где хранится ответ на задачу? Ответ хранится в последнем столбце, необходимо будет найти первый элемент отличный от нуля.</li>
   </ol>
+  <p>Будем заполнять матрицу по этапно. Строки матрицы это количество прыжков, которые уже сделал кузнечик. Столбцы матрицы это номера кочек, на которых может оказаться кузнечик.</p>
+  <p>Первая строка это куда может попасть кузнечик за 0 прыжков. Первый столбец это за сколько прыжков кузнечик может попасть на 0 кочку. Для этого ему нажно сделать 0 прыжков, то есть один способ. Первая строчка это простейший случай, это база.</p>
+  <p>Вторая строчка это куда мы можем попасть за 1 прыжок. Из-за того что в нашем примере второй кочки нет, то мы можем попасть только в первую кочку.</p>
+  <p>Третья строчка. Из кочки 1 кузнечик может прыгнуть только на кочку 3, потому что кочки 2 нет.</p>
+  <p>Четверная строчка. Из кочки 3 кузнечик может прыгнуть в кочки 4 и 5.</p>
+<pre>
+          0 1 2 3 4 5 6 7 8 9 10
+0 прыжков 1 0 0 0 0 0 0 0 0 0 0
+1 прыжок  0 1 0 0 0 0 0 0 0 0 0
+2 прыжок  0 0 0 1 0 0 0 0 0 0 0
+3 прыжок  0 0 0 0 1 1 0 0 0 0 0
+4 прыжок  0 0 0 0 0 1 2 0 0 0 0
+5 прыжок  0 0 0 0 0 0 1 0 2 0 0
+6 прыжок  0 0 0 0 0 0 0 0 1 2 2
+7 прыжок  0 0 0 0 0 0 0 0 0 1 3
+8 прыжок  0 0 0 0 0 0 0 0 0 0 1
+9 прыжок  0 0 0 0 0 0 0 0 0 0 0
+</pre>
+  <p>Из таблицы видно, что самый быстрый способ попасть на 10-ю кочку это за 6 прыжков.</p>
+  <p>Сколько разных способов (не только кратчайших, а вообще всех) есть чтобы попасть на 10-ю кочку? Ответ: 6. Это сумма всех элементов в 10-м столбце.</p>
 </article>
 
 
@@ -83,7 +103,7 @@
   <div class="anchor" id="p3"></div>
   <h3>Задача 2. Сумма цифр</h3>
 
-  <p>Сколько целых чисел длины n чья сумма цифр ровняется k?</p>
+  <p>Сколько целых чисел длины n чья сумма цифр равняется k?</p>
   <p>Отмечу, что очень часто в таких задачах требуется вывести ответ по модулю, потому что ответ слишком большой, например 10⁹ + 7. Для удобства нам потребуется постоянно брать промежуточные вычисления по модулю.</p>
   <code>(a1 + a2 + a3 + a4 + ... + an)%mod</code>
   <p>Это требуется, чтобы не пользоваться длинной арифметикой.</p>
