--- a/src/components/code/code-c/c-books/pages/elem-book6.html
+++ b/src/components/code/code-c/c-books/pages/elem-book6.html
@@ -821,6 +821,29 @@ void copy() {
 
   <h4>3.3 Константы (39)</h4>
 
+  <p>Целочисленная константа, например 123</p>
+  <p>Вещественная константа, например 123.01</p>
+  <p>Длинная константа, например 123L</p>
+  <p>Символьная константа это единственный символ заключенный в одиночные кавычки, например 'x'.</p>
+  <p>Константное выражение - это выражение из одних констант. Такие выражения вычисляются во время трансляции, а не во время выполнения программы, поэтому их можно использовать везде, где может стоять константа.</p>
+<pre>
+#define MAXLINE 1000
+char line[MAXLINE + 1]
+hours = 60 * 60 * seconds;
+</pre>
+  <p>Строковая константа это последовательность нуля или более символов, заключенная в двойные кавычки, например "string".</p>
+  <p>Строка представляет собой массив с элементами из одного символа. В конце каждой такой строки транслятор автоматически помещает нулевой символ '\0'. Размер строки не ограничен, но для определения ее длины строку нужно полностью просмотреть.</p>
+  <p>Напишем функцию strlen() определяющую длину строки, включая последний символ '\0'.</p>
+<pre>
+strlen(char s[]) {
+  int i;
+  i = 0;
+  while (s[i] != '\0') {
+    i++;
+  }
+  return i;
+}
+</pre>
   <p>Символьная константа и строка из одного символа это не одно и то же. 'x' != "x". 'x' это символ для буквы x. "x" это строка, содержащая один символ и символ "\0".</p>
 
   <h4>3.4 Описания (40)</h4>
@@ -830,11 +853,49 @@ void copy() {
   <h4>3.5 Арифметические операции (41)</h4>
 
   <p>Операцию % остаток от деления нельзя использовать для типа float и double.</p>
+  <p>Год будет високосным, если он  делится на 4, но не делится на 100, однако если делится на 400 то он тоже високосный.</p>
+<pre>
+if (year % 4 == 0 && year % 100 != 0 || year % 400 == 0) {
+  printf("високосный");
+} else {
+  printf("не високосный");
+}
+</pre>
 
   <h4>3.6 Отношения и логические операции (42)</h4>
 
+  <p>Цикл из функции getline, из одной из прошлых программ</p>
+<pre>
+for (i = 0; i &lt; lim - 1 && (c = getchar()) != '\n' && c != EOF; i++) {
+  s[i] = c;
+}
+</pre>
+  <p>Прежде чем считывать новый символ, нужно проверить, есть ли в массиве s для него место, поэтому в начале необходимо выполнить проверку i &lt; lim - 1. Если эта проверка даст отрицательный результат, то getchar выполнять уже не нужно. Также нет смысла сравнивать символ с EOF, пока не выполнится getchar.</p>
+
   <h4>3.7 Преобразование типов (43)</h4>
 
+  <p>Напишем функцию atoi() для преобразования строки, состоящей из цифр в число.</p>
+<pre>
+atoi(char s[]) {
+  int i, n;
+  n = 0;
+  for (i = 0; s[i] >= '0' && s[i] &lt;= '9; i++') {
+    n =  10 * n + s[i] - '0';
+  }
+  return n;
+}
+</pre>
+
+  <p>Напишем функцию lower() для преобразования заглавной буквы в строчную</p>
+<pre>
+lower(char c) {
+  if (c >= 'A' && c &lt;= 'Z') {
+    return (c + 'a' - 'A');
+  } else {
+    return c;
+  }
+}
+</pre>
   <p>Автоматическое преобразование типов происходит в трех случаях</p>
   <ol>
     <li>Если в одном выражении операнды разных типов, то они преобразуются к одному типу.</li>
@@ -848,17 +909,70 @@ void copy() {
 
   <p>Операции инкремента и декремента можно применять только к переменным и нельзя применять к выражениям. Например (i + i)++ выполнить нельзя.</p>
 
+  <p>Напишем функцию squeeze() выбрасывающую все вхождения символа из строки.</p>
+<pre>
+squeeze(char s[], int c) {
+  int i, j;
+  for (i = j = 0; s[i] != '\0'; i++) {
+    if (s[i] != c) {
+      s[j++] = s[i];
+    }
+  }
+  s[j] = '\0';
+}
+</pre>
+  <p>Если встречается символ, отличный от c, он копируется в текущую j-ю позицию, а затем j увеличивается для следующего символа.</p>
+
+  <p>Напишем функцию strcat() присоединяющую строку в конец другой строки. Мы должны позаботиться о том чтобы с строке хватило места для присоединения другой строки.</p>
+<pre>
+strcat(char s[], char t[]) {
+  int i, j;
+  i = j = 0;
+  while (s[i] != '\0') {
+    i++;
+  }
+  while ((s[i++] = t[j++]) != '\0') ; // пустой оператор
+}
+</pre>
+
   <h4>3.9 Поразрядные логическин операции (47)</h4>
 
   <p>Порязрядные операции нельзя применить к float и double.</p>
 
+  <p>Напишем функцию getbits() дающую n-разряднов из числа x, начиная с позиции p.</p>
+<pre>
+getbits(unsigned x, unsigned p, unsigned n) {
+  return (x >> (p + 1 - n)) & ~(~0 &lt;&lt; n);
+}
+</pre>
+
   <h4>3.10 Операции присваивания и выражения (48)</h4>
+
+  <p>Напишем функцию bitcount() считающую число 1-х разрядов в числе</p>
+<pre>
+bitcount(unsigned n) {
+  int b;
+  for (b = 0; n != 0; n >>= 1) {
+    if (n & 01) {
+      b++;
+    }
+  }
+  return b;
+}
+</pre>
 
   <h4>3.11 Условные выражения (50)</h4>
 
   <p>Найдем максимум из двух чисел</p>
   <code>if (a>b) max=a; else max=b;</code>
   <code>max = (a>b) & a : b;</code>
+
+  <p>Цикл печати N элементов массива по 10 чисел в строке. Колонка от колонки отделяется пробелом, а каждая строка заканчивается одним переходом на новую строку.</p>
+<pre>
+for (i = 0; i &lt; N; i++) {
+  printf("%6d%c", a[i], (i%10 == 9 || i == N-1) & '\n' : ' ');
+}
+</pre>
 
   <h4>3.12 Приоритеты и порядок вычислений (50)</h4>
 
@@ -904,8 +1018,159 @@ binary(int x, int v[], int n) {
 
   <p>Переключатель (оператор switch) предназначен для принятия одного из многих решений. В нем проверяется совпадение значения выражения с одной из нескольких констант и выполняется соответствующая ветвь.</p>
 
+  <p>Напишем программу посчета цифр и пустых символов</p>
+<pre>
+main() {
+  int c, i, nwhite, nother, ndigit[10];
+  nwhite = nother = 0;
+
+  for (i = 0; i &lt; 10; i++) {
+    ndigit[i] = 0;
+  }
+
+  while ((c = getchar()) != EOF) {
+    switch(c) {
+      case '0':
+      case '1':
+      case '2':
+      case '3':
+      case '4':
+      case '5':
+      case '6':
+      case '7':
+      case '8':
+      case '9':
+        ndigit[c-'0']++;
+        break;
+      case ' ':
+      case '\n':
+      case '\t':
+        nwhite++;
+        break;
+      default:
+        nother++;
+        break;
+    }
+  }
+
+  printf("digits = ");
+  for (i = 0; i &lt; 10; i++) {
+    printf("%d", ndigit[i]);
+  }
+  printf("\nwhite space = %d, other = %d\n", nwhite, nother);
+}
+</pre>
+
   <h4>4.5 Циклы while и for (57)</h4>
 
+  <p>Напишем функцию atoi() преобразующую строку в число. Эта версия работает с путс=ыми символами в начале и допускает знаки + или -.</p>
+<pre>
+atoi(char s[]) {
+  int i, n, sign;
+
+  for (i = 0; s[i] == ' ' || s[i] == '\n' || s[i] == '\t'; i++) ;
+
+  sign = 1;
+  if (s[i] == '+' || s[i] == '-') {
+    sign = (s[i++] == '+') ? 1 : -1;
+  }
+
+  for (n = 0; s[i] >= '0' && s[i] &lt;= '9'; i++) {
+    n = 10 * n + s[i] - '0';
+  }
+
+  return sign * n;
+}
+</pre>
+
+  <p>Напишем функцию shell(), которая упорядочивает массив целых чисел. На ранних этапах сравниваются элементы, расположенные далеко друг от друга, а не соседние. Поэтому на поздних этапах работы становится меньше. Интервал между сравниваемыми элементами постепенно уменьшается до 1, когда сортировка сводится к обычным перестановкам соседних элементов.</p>
+<pre>
+shell(int v[], int n) {
+  int gap, i, j, temp;
+
+  for (gap = n/2; gap > 0; gap /=2) {
+    for (i = gap; i &lt; n; i++) {
+      for (j = i-gap; j >= 0 && v[j] > v[j+gap]; j-=gap) {
+        temp = v[j];
+        v[j] = v[j+gap];
+        v[j+gap] = temp;
+      }
+    }
+  }
+}
+</pre>
+
+  <p>Напишем функцию reverse() - поворот строки на месте</p>
+<pre>
+reverse(char s[]) {
+  int c, i, j;
+  for (i = 0, j = strlen(s) - 1; i &lt; j; i++, j--) {
+    c = s[i];
+    s[i] = s[j];
+    s[j] = c;
+  }
+}
+</pre>
+
   <h4>4.6 Цмклы do-while (60)</h4>
+
+  <p>Напишем функцию itoa() - перевод числа в символы строки</p>
+<pre>
+itoa(char s[], int n) {
+  int i, sign;
+  if ((sign = n) &lt; 0) {
+    n = -n;
+  }
+  i = 0;
+  do {
+    s[i++] = n % 10 + '0';
+  } while ((n /= 10) > 0);
+  if (sign &lt; 0) {
+    s[i++] = '-';
+  }
+  s[i] = '\0';
+  reverse(s);
+}
+</pre>
+
+  <p>Конструкция do-while здесь нужна потому что в массиве должен быть хотя бы один символ.</p>
+
+  <h4>Break (разрыв) (61)</h4>
+
+  <p>Оператор break обеспечивает выход из таких конструкций как while, dor, do-while и switch.</p>
+
+  <p>Напишем программу, которая выбрасывает лишние символы пробела и табуляции из конца каждой входной строки. Оператор break используется для окончания цикла при обнаружении самого правого символа, отличного от пробела или табуляции.</p>
+<pre>
+#define MAXLINE 1000
+
+main() {
+  int n;
+  char line[MAXLINE];
+
+  while ((n = getline(line, MAXLINE)) > 0) {
+    while (iin >= 0) {
+      if (line[n] != ' ' && line[n] != '\t' && line[n] != '\n') {
+        break;
+      }
+    }
+    line[n+1] = '\0';
+    printf("s\n", line);
+  }
+}
+</pre>
+  <p>Программа getline выдает размер строки. Внутренний цикл while начинается с последнего символа в line и идет просмотр строки в обратном направлении в поисках первого символа, который не есть пробел или табуляция.</p>
+
+  <h4>Continue (продолжение) (62)</h4>
+
+  <p>Оператор continue переходит к началу следующей итерации в конструкциях while, for, do-while.</p>
+  <p>Напечатаем положительные числа, пропуская отрицательные в цикле.</p>
+<pre>
+for (i = 0; i &lt; N; i++) {
+  if (a[i] &lt; 0) {
+    continue;
+  }
+  printf("%d ", a[i]);
+}
+</pre>
 </article>
 
